src/test/deca/context/valid/return/return_boolean_expr_ok.deca
// Description :
// Return d’une expression booléenne
//
// Resultats :
// ok

class A { boolean f() { return true && false || true; } }
