src/test/deca/context/invalid/return/return_void_in_expr_custom.deca
// Description :
// return d'une méthode void dans une expression
//
// Resultats :
// Erreur contextuelle
// Ligne 7 : type void utilisé dans expression

class S {
    void f() {}
    int test() {
        return f(); // doit échouer
    }
}
